--- a/Spring-Mybatis-demo/WebContent/WEB-INF/web.xml
+++ b/Spring-Mybatis-demo/WebContent/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   <display-name>Spring-Mybatis-demo</display-name>
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:applicationContext.xml</param-value>
+    <param-value>classpath:configs/applicationContext.xml</param-value>
   </context-param>
    <context-param>
         <param-name>webAppRootKey</param-name>
@@ -23,7 +23,7 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>classpath:spring-mvc.xml</param-value>
+      <param-value>classpath:configs/spring-mvc.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
     <async-supported>true</async-supported>
@@ -35,14 +35,4 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
-  <servlet>
-    <description></description>
-    <display-name>ServletTest</display-name>
-    <servlet-name>ServletTest</servlet-name>
-    <servlet-class>com.jony.java.servlet.ServletTest</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ServletTest</servlet-name>
-    <url-pattern>/servlet.jsp</url-pattern>
-  </servlet-mapping>
 </web-app>
